--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,19 +1,19 @@
 <h1>New Author</h1>
 
-<%= form_with scope: :author, local: true do |form| %>
+<%= form_with url: authors_path, local: true do |form| %>
   <p>
-    <%= form.label "First name" %><br>
-    <%= form.text_field :first_name %>
+    <%= form.label :'author[first_name]', "First name" %><br>
+    <%= form.text_field :"author[first_name]" %>
   </p>
 
   <p>
-    <%= form.label "Last name" %><br>
-    <%= form.text_area :last_name %>
+    <%= form.label :'author[last_name]', "Last name" %><br>
+    <%= form.text_field :"author[last_name]" %>
   </p>
 
   <p>
     <%= form.label "Homepage" %><br>
-    <%= form.text_area :homepage %>
+    <%= form.text_field :"author[homepage]" %>
   </p>
 
   <p>
