--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,13 +1,13 @@
 <h1>New Author</h1>
 
-<% if @article.errors.any? %>
+<% if @author.errors.any? %>
   <div id="error_explanation">
     <h2>
-      <%= pluralize(@article.errors.count, "error") %> prohibited
+      <%= pluralize(@author.errors.count, "error") %> prohibited
       this article from being saved:
     </h2>
     <ul>
-      <% @article.errors.full_messages.each do |msg| %>
+      <% @author.errors.full_messages.each do |msg| %>
         <li>error: <%= msg %></li>
       <% end %>
     </ul>
