--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,33 +1,31 @@
 <h1>New Author</h1>
 
-<%= form_with scope: :author, url: authors_path, local: true do |form| %>
+<%= form_with scope: :author,url: authors_path, local: true do |form| %>
   <% if @author.errors.any? %>
     <div id="error_explanation">
-      <h2>
-        <%= pluralize(@author.errors.count, "error") %> prohibited
-        this author from being saved:
-      </h2>
+      <h2><%= pluralize(@author.errors.count, "error") %> prohibited this author from being saved:</h2>
+
       <ul>
-        <% @author.errors.full_messages.each do |msg| %>
-          <li>error: <%= msg %></li>
+        <% @author.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
   <p>
-    <%= form.label :'author[first_name]', "First name" %><br>
-    <%= form.text_field :"author[first_name]" %>
+    <%= form.label :first_name, "First name" %><br>
+    <%= form.text_field :first_name %>
   </p>
 
   <p>
-    <%= form.label :'author[last_name]', "Last name" %><br>
-    <%= form.text_field :"author[last_name]" %>
+    <%= form.label :last_name, "Last name" %><br>
+    <%= form.text_field :last_name %>
   </p>
 
   <p>
-    <%= form.label "Homepage" %><br>
-    <%= form.text_field :"author[homepage]" %>
+    <%= form.label :homepage, "Homepage" %><br>
+    <%= form.text_field :homepage %>
   </p>
 
   <p>
