adds edit link to paper-index

--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -8,6 +8,10 @@
     <p>
       <%= link_to "Show this paper", paper %>
     </p>
+
+    <p>
+      Edit paper: <%= link_to "Edit", edit_paper_path(paper) %>
+    </p>
   <% end %>
 </div>
 
