adds delete link to paper-index

--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -12,6 +12,10 @@
     <p>
       Edit paper: <%= link_to "Edit", edit_paper_path(paper) %>
     </p>
+
+    <p>
+      Delete paper: <%= link_to "Delete", paper_path(paper), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    </p>
   <% end %>
 </div>
 
