--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -2,6 +2,8 @@
 
 <%= render @paper %>
 
+<%= render @paper.authors %>
+
 <div>
   <%= link_to "Edit this paper", edit_paper_path(@paper) %> |
   <%= link_to "Back to papers", papers_path %>
