list full names of all authors of a paper

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -5,7 +5,7 @@
 Authors:
 <ul>
 <%= @paper.authors.each do |author| %>
-  <li><%= author.full_name %></li>
+  <li><%= author.name %></li>
 <% end %>
 </ul>
 
